--- a/index.html
+++ b/index.html
@@ -15,16 +15,17 @@
 
 	<header>
 		<h1>Hershey's</h1>
-	</header>
 	
-	<nav id="topnav">
-		<ul>
-			<li><a href="about">About Hershey Foods</a></li>
-			<li><a href="invest">Investor Relations</a></li>
-			<li><a href="news">Newsroom</a></li>
-			<li><a href="careers">Career Opportunities</a></li>			
-		</ul>
-	</nav>
+		<nav>
+			<ul>
+				<li><a href="about">About Hershey Foods</a></li>
+				<li><a href="invest">Investor Relations</a></li>
+				<li><a href="news">Newsroom</a></li>
+				<li><a href="careers">Career Opportunities</a></li>			
+			</ul>
+		</nav>
+	
+	</header>
 	
 	<main>
 		<h2 id="pumpkin">Trick or Treat</h2>
@@ -58,7 +59,7 @@
 		
 
 	
-	<nav id="sidenav">
+	<nav>
 		<ul>
 			<li><a href="kidztown">KidzTown</a></li>
 			<li><a href="visit/giftshop.html">Gift Shop</a></li>
