--- a/index.html
+++ b/index.html
@@ -28,11 +28,12 @@
 	</header>
 	
 	<main>
-		<h2 id="pumpkin">Trick or Treat</h2>
-		<h2 id="holiday"><a href="blog/celebrate.html">Celebrate the Holidays with Hershey's Delights</a></h2>
-		<h2 id="banner"><a href="blog/winatrip.html">Win a Trip to Hershey, PA</a></h2>
+		<div id="pumpkin">Trick or Treat</div>
+		<section id="holiday"><a href="blog/celebrate.html">Celebrate the Holidays with Hershey's Delights</a></section>
 		
-		<section>
+		<section id="banner"><a href="blog/winatrip.html">Win a Trip to Hershey, PA</a></section>
+		
+		<section id="recipe">
 			<h2>Featured Recipes</h2>
 				
 				<article>
