trick or treat fixed
fixed trick or treat banner (with #pumpkin id) by adding correct width
and fixing unnecessary link

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 	</header>
 	
 	<main>
-		<div id="pumpkin">Trick or Treat</div>
+		<div id="pumpkin"><img alt="trick or treat" src="img/pumpkin.png"></div>
 		<section id="holiday"><a href="blog/celebrate.html">Celebrate the Holidays with Hershey's Delights</a></section>
 		
 		<section id="banner"><a href="blog/winatrip.html">Win a Trip to Hershey, PA</a></section>
