--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 <head>
 	<meta charset="utf-8">
-	<link href='http://fonts.googleapis.com/css?family=Pacifico' rel='stylesheet' type='text/css'>
+	<link href='http://fonts.googleapis.com/css?family=Courgette' rel='stylesheet' type='text/css'>
 	<link href='http://fonts.googleapis.com/css?family=Francois+One' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" href="style/reset.css">
 	<link rel="stylesheet" href="style/hershey.css">
